--- a/css/game.css
+++ b/css/game.css
@@ -21,6 +21,7 @@ body {
 }
 
 .flipContainer {
+    -webkit-perspective: 1000px;
     perspective: 1000px;
     width: 16.2%;
     height: 25vh;
@@ -42,7 +43,9 @@ body {
 }
 
 .card {
+    -webkit-transition: 0.6s;
     transition: 0.6s;
+    -webkit-transform-style: preserve-3d;
     transform-style: preserve-3d;
     cursor: pointer;
 }
@@ -54,6 +57,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+    -webkit-transform: rotateY(180deg);
     transform: rotateY(180deg);
 }
 
@@ -64,6 +68,7 @@ body {
     background-position: center;
     background-color: #990000;
     z-index: 2;
+    -webkit-transform: rotateY(0deg);
     transform: rotateY(0deg);
     display: flex;
     align-items: center;
@@ -71,6 +76,7 @@ body {
 
 .front,
 .reveal {
+    -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
 }
 
